Version Field is skipped while parsing WMM_TSPEC causing wrong dissecting (1byte offset missing) of all fields in the TSPEC
This issue was migrated from bug 8330 in our old bug tracker.
Original bug information:
Reporter: chaitanya
Status: RESOLVED FIXED
Product: Wireshark
Component: Dissection engine (libwireshark)
OS: All
Platform: x86
Version: 1.8.5
Attachments:
file_8330.txt: Patch for adding version dissection in tspec
tspec_bug.pcap: Reference Capture Having TSPEC Frames