Move version field outside of the switch, since it exists for all subtypes. This fixes the TSPEC case, which didn't include it before.

https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=8330

svn path=/trunk/; revision=47653